--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.7",
+    "pinia": "^2.1.7",
     "vant": "^4.8.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
